bluec-tests/tests/invalid/types_fn_pointer/invalid_initializer1.c
int main(void) {
    double d = 0.0;
    int (*fn)(void) = &d;
    return 0;
}